data/derived/comb/progs/unify/prog1718.ml.out
Characters 143-157:
  failwith Printf.sprintf "hi %d" addit
           ^^^^^^^^^^^^^^
Error: This expression has type ('a, unit, string) format -> 'a
       but an expression was expected of type string
